// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Notification/Banner Error Banner 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-jSgupP lpbSzY sc-banner"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <div
      className="sc-gKsewC ehdtkM"
    >
      <div
        className="sc-fubCfw jmSQlc"
      >
        Error
      </div>
      <span
        className="sc-iBPRYJ iWUlck"
      >
        There is an error.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Notification/Banner Playground 1`] = `
<div
  className="sc-jSgupP hXxpKg sc-banner"
>
  <i
    className="fas fa-exclamation-triangle"
  />
  <div
    className="sc-gKsewC ehdtkM"
  >
    <div
      className="sc-fubCfw jmSQlc"
    >
      Man
    </div>
    <span
      className="sc-iBPRYJ iWUlck"
    >
      There is a success
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Notification/Banner Success Banner 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-jSgupP hXxpKg sc-banner"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <div
      className="sc-gKsewC ehdtkM"
    >
      <div
        className="sc-fubCfw jmSQlc"
      >
        Success
      </div>
      <span
        className="sc-iBPRYJ iWUlck"
      >
        There is a success.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Notification/Banner Warning Banner 1`] = `
<div
  className="sc-gsTCUz dUzLYl"
>
  <div
    className="sc-jSgupP fkkIew sc-banner"
  >
    <i
      className="fas fa-exclamation-triangle"
    />
    <div
      className="sc-gKsewC ehdtkM"
    >
      <div
        className="sc-fubCfw jmSQlc"
      >
        Warning
      </div>
      <span
        className="sc-iBPRYJ iWUlck"
      >
        There is a warning.
      </span>
    </div>
  </div>
</div>
`;
